removed outline from i-view to avoid scrollbars in, well, everyhing (starting with HelloWorld)
svn changeset:4364/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -21,6 +21,7 @@
 	width: 100%;
 	overflow: auto; 
 	/* avoid scrollbars with margins in root layout */
+	outline: none;
 	margin-top:-1px;
 	border-top:1px solid transparent;
 }
